# DP_PDiary

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
diary/: forms.py  models.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0002_initial.py
diary/templates/block/: footer.html  navbar.html
diary/templates/diary/: base.html  index.html  post_create.html  post_delete.html  post_detail.html  search.html
static/css/: style.css
users/: admin.py  constants.py  forms.py  models.py  permissions.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0003_alter_user_avatar.py  0004_alter_user_avatar.py
users/templates/users/: invalid_email.html  login.html  logout.html  registration.html  reset_password_form.html  user_form.html
