[tool.poetry]
name = "dp-pdiary"
version = "0.1.0"
description = ""
authors = ["Alexandr <blix@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
django = "^5.1.6"
pillow = "^11.1.0"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.7.0"
djangorestframework-simplejwt = "^5.4.0"
celery = "^5.4.0"
django-ckeditor = "^6.7.2"
nullable = "^0.2.0"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
